--- a/index.html
+++ b/index.html
@@ -14,8 +14,8 @@
         <h2 class="title">BMI Calculator</h2>
         <div>
             <section class="inputs">
-                <div class="in-group f"><label for="weight">Your Weight: </label><input type="number" id="weight"></div>
-                <div class="in-group"><label for="height">Your Height:</label><input type="number" id="height"></div>
+                <div class="in-group f"><label for="weight">Your Weight: </label><input type="number" id="weight" placeholder="(kg)"></div>
+                <div class="in-group"><label for="height">Your Height:</label><input type="number" id="height" placeholder="(m)></div>
                 <div class="in-group"><label for="age">Your Age:</label><input type="number" id="age"></div>
                 <div class="in-group"><label for="gender">Gender:</label><select id="gender">
                         <option value="1">Male</option>
