--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
             <section class="inputs">
                 <div class="in-group f"><label for="weight">Your Weight: </label><input type="number" id="weight" placeholder="(kg)"></div>
                 <div class="in-group"><label for="height">Your Height:</label><input type="number" id="height" placeholder="(m)"></div>
-                <div class="in-group"><label for="age">Your Age:</label><input type="number" id="age"></div>
+                <div class="in-group"><label for="age">Your Age:</label><input type="number" id="age" placeholder="(year)"></div>
                 <div class="in-group"><label for="gender">Gender:</label><select id="gender">
                         <option value="1">Male</option>
                         <option value="0">Female</option>
